--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/markdown.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/markdown.scss
@@ -10,6 +10,7 @@
         border-left: .25em solid #dfe2e5;
         color: #6a737d;
         padding: 0 1em;
+        text-align: justify;
     }
 
     table:not(.table) {
