add class quote for kdls

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/color.scss
@@ -87,6 +87,7 @@ $uk-colors: (
     accordion: #dcedc8,
     reflect: #e4f2c9,
     stripped: #eef9e3,
+    quote: #555555,
     dark-gray: #666666,
     sub-label: #666666,
     over-time: #666666,
