--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/005/b/b.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/005/b/b.xhtml
@@ -63,7 +63,7 @@
 					</div>
 					<div class="flex">
 						<!--B6_1-->
-						<div tabindex="5" data-bind="ntsFormLabel: {required : true }">#{i18n.getText('CMF005_27')}</div>
+						<div data-bind="ntsFormLabel: {required : true }">#{i18n.getText('CMF005_27')}</div>
 						<table>
 							<tr>
 								<td>
