update time editor (fix null)

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
@@ -160,3 +160,10 @@
     padding-right: 3px;
   }
 }
+
+
+.was-validated 
+.form-control:invalid, 
+.form-control.is-invalid {
+  background-image: none;
+}
