--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/navbar.scss
@@ -30,6 +30,7 @@ body {
         }
 
         .navbar-brand {
+            color: #fff;
             cursor: pointer;
             margin-right: 0;
             padding-left: 15px;
