--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/button.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/button.scss
@@ -35,13 +35,14 @@
             border-top-width: 0px;
         }
     }
+    &-block {
+        display: inline-block;
+    }
     &-selection {
         width: 100%;
-        display: block;
         cursor: pointer;
         text-align: left;
         position: relative;
-        border: 1px solid $input-border-color !important;
         &:after {
             content: "\f054";
             font-weight: 600;
@@ -49,12 +50,20 @@
             position: absolute;
             top: calc(50% - 10px);
             right: 15px;
-            color: #aaa;
         }
         .badge {
             top: 0;
             font-size: 100%;
             font-weight: 600;
+        }
+    }
+    &.btn-selection {
+        &.border {
+            &:focus,
+            &:hover,
+            &:active {
+                margin-top: 0px;
+            }
         }
     }
     &-no-content {
