Bottom functions area
(cherry picked from commit aed363fce0c72a8f1b27b38820e825a1e79108a2)

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -5794,6 +5794,12 @@ div .ex-area-line.x-stay {
   color: #0066CC;
 }
 
+/* line 21, ../sass/frame/_guide.scss */
+.nts-guide-area.nts-bottom {
+  position: absolute;
+  bottom: 72px;
+}
+
 /* line 1, ../sass/components/_monthdays.scss */
 .ntsMonthDays_Component {
   float: left;
