--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/floatbtn.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/floatbtn.scss
@@ -1,3 +1,13 @@
+body {
+    &>.fixed-action-btn {
+        z-index: 1050;
+
+        &.active {
+            z-index: 1051;
+        }
+    }
+}
+
 .fixed-action-btn {
     position: fixed;
     right: 25px;
