fixed scroll off body when move sidebar

--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/container.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/container.scss
@@ -10,6 +10,17 @@ body {
             }
         }
     }
+    &.modal-open,
+    &.show-side-bar {
+        .wrapper {
+            .sidebar {
+                &+.container,
+                &+.container-fluid {
+                    position: fixed;
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 992px) {
