--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmw/005/b/kmw005.b.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmw/005/b/kmw005.b.main.css
@@ -26,3 +26,12 @@
 	padding-right: 15px;
 	padding-bottom: 30px;
 }
+
+.icon-style {
+	background:
+		url('http://localhost:8080/nts.uk.at.web/view/kmw/005/a/images/2.png');
+	width: 17px;
+	height: 17px;
+	background-size: 17px 17px;
+	margin-left: 46px;
+}
