--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmw/005/a/kmw005.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmw/005/a/kmw005.a.main.css
@@ -25,7 +25,6 @@
 	min-width: 700px;
 }
 
-
 .valueData {
 	float: left;
 }
@@ -41,7 +40,16 @@
 .help-btn {
 	width: 33px;
 }
-.nts-help-button-image img{
-	width:400px
-	
+
+.nts-help-button-image img {
+	width: 400px
+}
+
+.icon-style {
+	background:
+		url('http://localhost:8080/nts.uk.at.web/view/kmw/005/a/images/2.png');
+	width: 17.727px;
+	height: 17.727px;
+	background-size: 17.727px 17.727px;
+	margin-left: 23px;
 }
