fixbug 108449 v3 edit css

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmw/005/a/kmw005.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmw/005/a/kmw005.a.main.css
@@ -47,7 +47,7 @@
 
 .icon-style {
 	background:
-		url('http://localhost:8080/nts.uk.at.web/view/kmw/005/a/images/2.png');
+		url('images/2.png');
 	width: 17.727px;
 	height: 17.727px;
 	background-size: 17.727px 17.727px;
