update code cps013

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
@@ -73,9 +73,9 @@
 				<div id = "button_area">
 					<com:ko tag="if" bind="isComplete() &amp; error()">
 						<!-- B3_001 -->
-	 					<button id = "button3001" tabindex="1" class="large" data-bind="">#{i18n.getText('CPS013_22')}</button>
+	 					<button id = "button3001" tabindex="1" class="large" data-bind="click: exportCsv">#{i18n.getText('CPS013_22')}</button>
 						<!-- B3_002 -->
-						<button tabindex="2" class="cancelbutton" data-bind="click: cancelTask, enable : enableCancelTask">#{i18n.getText('CPS013_23')}</button>
+						<button tabindex="2" class="cancelbutton" data-bind="click: reCheck, enable : enableCancelTask">#{i18n.getText('CPS013_23')}</button>
 						<!-- B3_003 -->
 						<button tabindex="3" class="closebutton" data-bind="click: closeDialog">#{i18n.getText('CPS013_24')}</button>
 					</com:ko>
