update ui cps013

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
@@ -40,10 +40,9 @@
 						<tr>
 							<!-- B1_008 -->
 							<td class="fix-width" rowspan="4">#{i18n.getText('CPS013_41')}</td>
-							<td><span data-bind="text: aggCreateCount"></span>/<span data-bind="text: peopleCount">
-							
+							<td><span data-bind="text: numberEmpChecked"></span>/<span data-bind="text: countEmp">
 							</span>
-							<span class="process-status" data-bind="text: aggCreateStatus"></span>
+							<span class="process-status" data-bind="text: statusCheck"></span>
 								<span class="process-error" data-bind="text: aggCreateHasError"></span>
 							</td>
 							
