--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
@@ -84,7 +84,7 @@
 					</com:ko>
 					<com:ko tag="if" bind="isComplete() &amp; !error()">
 						<!-- B3_003 -->
-						<button id="btn-f-stop" tabindex="2" class="large" data-bind="click: cancelTask">#{i18n.getText('CPS013_24')}</button>
+						<button id="btn-f-stop" tabindex="2" class="large" data-bind="click: closeDialog">#{i18n.getText('CPS013_24')}</button>
 	 				</com:ko>
  				</div>
 			</div>
