--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
@@ -7,7 +7,7 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
-			<script>var dialogSize = { width: 600, height: 300 };</script>
+			<script>var dialogSize = { width: 800, height: 500 };</script>
 			<com:ValidatorScript>
 					nts.uk.shr.com.primitive.PersonId
 				</com:ValidatorScript>
@@ -74,7 +74,7 @@
 						<!-- B3_001 -->
 	 					<button id = "button3001" tabindex="1" class="large" data-bind="click: exportCsv">#{i18n.getText('CPS013_22')}</button>
 						<!-- B3_002 -->
-						<button tabindex="2" class="cancelbutton" data-bind="click: reCheck, enable : enableCancelTask">#{i18n.getText('CPS013_23')}</button>
+						<button tabindex="2" class="cancelbutton" data-bind="click: RecheckTheSameConditions, enable : enableCancelTask">#{i18n.getText('CPS013_23')}</button>
 						<!-- B3_003 -->
 						<button tabindex="3" class="closebutton" data-bind="click: closeDialog">#{i18n.getText('CPS013_24')}</button>
 					</com:ko>
