--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/a/index.xhtml
@@ -27,7 +27,7 @@
 					<!-- A1_003 -->
 					<div data-bind="ntsFormLabel: {required: true}" style="margin-right: 50px;">#{i18n.getText('CPS013_3')}</div>
 					<!-- A1_004 -->
-					<div id="date_text" data-bind="ntsDatePicker: {value: date, 
+					<div id="date_text" tabindex="3" data-bind="ntsDatePicker: {value: date, 
 													required: true, 
 													name: '#[CPS013_4]',
 													dateFormat: 'YYYY/MM/DD'}"></div>
@@ -36,14 +36,14 @@
 							<tr>
 								<td>
 									<!-- A2_001 -->
-									<div class = "column_left" data-bind="ntsCheckBox: { checked: perInfoChk }">#{i18n.getText('CPS013_5')}</div>
+									<div class = "column_left"  tabindex="4" data-bind="ntsCheckBox: { checked: perInfoChk }">#{i18n.getText('CPS013_5')}</div>
 									<div class = "column_left" style = "width: 400px">
 										<hr></hr>
 									</div>
 								</td>
 								<td>
 									<!-- A3_001 -->
-									<div class = "column_right" data-bind="ntsCheckBox: { checked: masterChk }">#{i18n.getText('CPS013_11')}</div>
+									<div class = "column_right" tabindex="5" data-bind="ntsCheckBox: { checked: masterChk }">#{i18n.getText('CPS013_11')}</div>
 									<div class = "column_right" style = "width: 450px">
 										<hr></hr>
 									</div>
@@ -90,7 +90,7 @@
 						</tbody>
 					</table>
 					<div id = "oniggrid">
-						<table id="grid2"></table>
+						<table id="grid2" tabindex="6"></table>
 					</div>
 				</div>
 			</div>
