--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/step-wizard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/step-wizard.scss
@@ -2,8 +2,8 @@
     &.nav-step-wizard {
         background-color: darken($color: $secondary, $amount: 65%);
         padding: 3px;
-        margin-left: -15px;
-        margin-right: -15px;
+        margin-left: -1rem;
+        margin-right: -1rem;
         .nav-item {
             padding: 0;
             cursor: pointer;
