--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/index.xhtml
@@ -53,7 +53,7 @@
 				</div>
 				<com:ko tag="if" bind="error()">
 					<div class="place-holder">
-						<table id="single-list" class="disappear"  tabindex="2"
+						<table id="single-list" class="disappear"
 							data-bind="css: {disappear: !isComplete()},
 							ntsGridList: {
 								dataSource: errorMessageInfo,
@@ -80,11 +80,11 @@
 					</com:ko>
 					<com:ko tag="if" bind="!isComplete()">
 	 					<!-- B3_004 -->
-						<button id="btn-f-close" tabindex="3" class="large" data-bind="click: cancelTask">#{i18n.getText('CPS013_50')}</button>
+						<button id="btn-f-close" tabindex="4" class="large" data-bind="click: cancelTask">#{i18n.getText('CPS013_50')}</button>
 					</com:ko>
 					<com:ko tag="if" bind="isComplete() &amp; !error()">
 						<!-- B3_003 -->
-						<button id="btn-f-stop" tabindex="2" class="large" data-bind="click: closeDialog">#{i18n.getText('CPS013_24')}</button>
+						<button id="btn-f-stop" tabindex="3" class="large" data-bind="click: closeDialog">#{i18n.getText('CPS013_24')}</button>
 	 				</com:ko>
  				</div>
 			</div>
