--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/cps013.e.main.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/cps013.e.main.css
@@ -38,3 +38,7 @@ table.info-table td.fix-width {width: 150px; background:#CFF1A5; padding:2px;}
     font-size: 75% !important;
     height: 20px !important;
 }
+
+html {
+	overflow: hidden;
+}
