--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/cps013.e.main.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/013/e/cps013.e.main.css
@@ -1,5 +1,3 @@
-#contents-area {overflow: hidden;}
-
 table.info-table {border-collapse: collapse; min-width:550px;}
 table.info-table td {border: 1px solid #CCC; padding:2px 7px;}
 table.info-table td.fix-width {width: 150px; background:#CFF1A5; padding:2px;}
@@ -40,5 +38,15 @@ table.info-table td.fix-width {width: 150px; background:#CFF1A5; padding:2px;}
 }
 
 html {
-	overflow: hidden;
+	overflow-y: scroll;
+}
+
+
+.buttonCancel{
+	float : right;
+	margin-right: 25px;
+}
+.buttoncloseDialogNoError{
+	float : right;
+	margin-right: 25px;
 }
