--- a/nts.uk/uk.mobile/ClientApp/views/documents/controls/fix-table/style.scss
+++ b/nts.uk/uk.mobile/ClientApp/views/documents/controls/fix-table/style.scss
@@ -2,16 +2,12 @@ table.table-bordered{
     border:1px solid black;
   }
 table.table-bordered > thead > tr > th{
-    border:1px solid blue;
+    border:1px solid black;
 }
 table.table-bordered > tbody > tr > td{
     border:1px solid black;
 }
 
 table.table-bordered > tfoot > tr > td{
-    border:1px solid red;
-}
-
-.table-body {
-    border-color: yellow;
+    border:1px solid black;
 }
