--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/b/index.xhtml
@@ -13,7 +13,10 @@
 
 		<div class="contents-area">
 			<div class="system_define">
-				tab 2				
+				<div style="height: 300px;">
+					<table id="grid"></table>
+				</div>
+				
 			</div>
 		</div>
 	</ui:composition>
