--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -1,3 +1,11 @@
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:com="http://xmlns.jcp.org/jsf/component"
+	xmlns:h="http://xmlns.jcp.org/jsf/html">
+<body>
+<ui:composition>
 <div data-bind="let: { $vm: $data }">
 	<div data-bind="if: screenModeNew()&amp;&amp;indicationOvertimeFlg()" >
 		<div class="cf valign-center control-group"
@@ -590,6 +598,17 @@
 							}" />
 			</div>
 		</div>
+		<!-- Footer -->
+		<div data-bind="if: screenModeNew()">
+			<div class="lstApprover" data-bind="with: kaf000_a">
+				<ui:include src="../../000/a/index2_New.xhtml" />
+				<BR />
+			</div>
+		</div>
+		<div id = "appr" data-bind="if: !screenModeNew()">
+			<ui:include src="../../000/b/index1.xhtml" />
+		</div>
+		<!-- end footer -->
 	</div>
 	<!--RIGHT CONTENT -->
 	<div class="right-contents panel" style ="background-color: #E7E6E6;" data-bind ="visible: isRightContent">
@@ -689,7 +708,7 @@
 		<!-- 				A12_15 -->
 		<!-- 				<label data-bind="text : workClockTo1Pre"></label> -->
 						</div>
-						<div class="control-group" data-bind ="visible: displayWorkClockFrom2To2Pre">
+						<div class="control-group" data-bind ="if:false">
 						<!--A12_28 -->
 						<label style ="margin-left: 72px" data-bind="text : workClockFrom2To2Pre"></label>
 		<!-- 				A12_29 -->
@@ -722,3 +741,6 @@
 		</div>
 	</div>
 </div>
+</ui:composition>
+</body>
+</html>
