--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/card.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/card.scss
@@ -6,8 +6,8 @@
         .card{
             &-header {
                 padding: 0.5rem 15px;
-                margin-left: -1rem;
-                margin-right: -1rem;
+                margin-left: -15px;
+                margin-right: -15px;
                 border-radius: 0;
                 border-top: 1px solid $card-border-color;
                 display: flex;
