JMM017 ThanhPV create ScreenB, C

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/a/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/a/index.xhtml
@@ -15,17 +15,8 @@
 			</com:ValidatorScript>
 
 			<com:scriptfile set="IGNITE" />
-
-			<script>
-				__viewContext.primitiveValueConstraints.PlanYearHolidayFrameName = {
-					valueType: 'String',
-					maxLength: 12,
-				};
-			</script>
-			<!-- <com:scriptfile path="/lib/generic/igniteui/js/extensions/infragistics.datasource.knockoutjs.js"  of="/nts.uk.com.js.web"/>
-			<com:scriptfile path="/lib/generic/igniteui/js/extensions/infragistics.ui.grid.knockout-extensions.js" of="nts.uk.com.js.web" /> -->
-			<script src="https://cdn-na.infragistics.com/igniteui/2019.1/latest/js/extensions/infragistics.datasource.knockoutjs.js"/>
-			<script src="https://cdn-na.infragistics.com/igniteui/2019.1/latest/js/extensions/infragistics.ui.grid.knockout-extensions.js"/>
+			<com:scriptfile path="/lib/generic/igniteui/js/extensions/infragistics.datasource.knockoutjs.js"  of="/nts.uk.com.js.web"/>
+			<com:scriptfile path="/lib/generic/igniteui/js/extensions/infragistics.ui.grid.knockout-extensions.js" of="nts.uk.com.js.web" />
 			<com:stylefile path="../b/jmm017.b.style.css" />
 			<com:scriptfile path="../b/jmm017.b.service.js" />
 			<com:scriptfile path="../b/jmm017.b.vm.js" />
