--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/b/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/b/index.xhtml
@@ -65,99 +65,11 @@
 			<div class="gridControlBtn">
 				<button tabindex="11" id="buttonExpandAll" class="inline" >#{i18n.getText('JMM017_B422_14')}</button>
 				<button tabindex="12" id="buttonCollapseAll" class="inline" >#{i18n.getText('JMM017_B422_15')}</button>
+				<button tabindex="13" id="findBtn" class="inline" data-bind="click: test ">#{i18n.getText('JMM017_B422_12')}</button>
 			</div>
 			<div class="gridTableContent">
 				<div style="height: 430px;">
-					
-					<table id="grid" data-bind="igGrid: {
-						primaryKey: 'id',
-						columns: [
-							{
-								headerText: 'ID',
-								key: 'id',
-								hidden: true
-							},
-			                {
-			                     headerText: '', 
-			                     key: 'Edit',
-			                     dataType: 'string', 
-			                     width: '5%', 
-			                     unbound: true, 
-			                     template: editTem()
-			                 },
-			                {
-			                    headerText: '#{i18n.getText('JMM017_B422_17')}', key: 'categoryName', dataType: 'string', width: '5%'
-			                },
-			                {
-			                    headerText: '#{i18n.getText('JMM017_B422_18')}', key: 'eventName', dataType: 'string', width: '10%'
-			                },
-			                {
-			                    headerText: '#{i18n.getText('JMM017_B422_19')}', key: 'programName', dataType: 'string', width: '15%'
-			                },
-			                {
-			                    headerText: '#{i18n.getText('JMM017_B422_20')}', key: 'screenName', dataType: 'string', width: '15%'
-			                },
-			                {
-			                    headerText: '#{i18n.getText('JMM017_B422_21')}', key: 'usageFlgByScreen', dataType: 'string', width: '10%'
-			                },
-			                {
-			                    headerText: '#{i18n.getText('JMM017_B422_22')}', key: 'guideMsg', dataType: 'string', width: '25%'
-			                }
-			                ],
-			                dataSource: guideMessageList,
-			                dataSourceType: 'json',
-			                responseDataKey: 'results',
-			                height: '500px',
-			                width: '1000px',
-			                tabIndex: 1,
-			                rendered: function() { $('#grid').igGridGroupBy('groupByColumn', 'categoryName'); },
-			                features: [
-			                    {
-			                        name: 'Paging', 
-			                        type: 'local',
-			                        pageSize: 10
-			                    },
-			                    {
-			                        name: 'Filtering', 
-			                        type: 'local',
-			                        mode: 'simple'
-			                    },
-			                    {
-			                        name: 'Sorting', 
-			                        type: 'local'
-			                    },
-			                    {
-			                        name: 'GroupBy', 
-			                        groupByDialogContainment: 'window', 
-			                        columnSettings: [
-			                            {
-			                                columnKey: 'categoryName',
-			                                isGroupBy: false
-			                            },
-			                            {
-			                                columnKey: 'programName',
-			                                isGroupBy: false
-			                            }
-			                        ]
-			                    },
-			                    {
-			                        name: 'Hiding' 
-			                    },
-			                    {
-			                        name: 'Resizing' 
-			                    },
-			                    {
-			                    	name: 'Updating',
-			                    	editMode: 'none',
-			                    	enableAddRow: false,
-			                    	enableDeleteRow: false
-			                    },
-			                    {
-			                        name: 'ColumnMoving', 
-			                        columnMovingDialogContainment: 'window'
-			                    }
-			                ]
-					}"></table>
+					<table id="grid"></table>
 				</div>
 			</div>
 		</div>
