JMM017 ThanhPV create ScreenB, C

--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/index.xhtml
@@ -39,7 +39,7 @@
 							constraint: 'String_Any_1000', 
 							name: '#{i18n.getText('JMM17_C222_5')}', 
 							required: true, 
-							option: {width: '850px'}
+							option: {width: '850px', height: '150px'}
 							}" />
 					</div>
 				</div>
