--- a/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/jmm017.c.style.css
+++ b/nts.uk/uk.hr/hr.web/nts.uk.hr.web/src/main/webapp/view/jmm/017/c/jmm017.c.style.css
@@ -1,1 +1,13 @@
-#contents-area .label{margin: 15px 0 0 10px;}
+.cf {
+	width: 900px;
+	margin: 40px auto;
+}
+.cf .settings{
+	margin: 10px;
+}
+.cf .settings .label{
+	margin-bottom: 20px;
+}
+.cf .inputTextarea {
+	height: 150px;
+}
